fix unnecessary horizontal scrolling

--- a/css/base.css
+++ b/css/base.css
@@ -1823,7 +1823,7 @@ video {
 }
 
 #go-to-latest {
-  right: 1rem;
+  right: 1.5rem;
   bottom: 1rem;
 }
 
